--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <br>
             with lower prices and easy, fully refundable access with zero percent brokerage charge.
         </p>
-        <img src="C:\Users\ASUS\Downloads\gghffgg\train.jpg" width="1000px" alt="Train Image">
+        <img src="train.jpg" width="1000px" alt="Train Image">
     </header>
     
   
@@ -35,22 +35,22 @@
         <br>    
         <div class="gallery">
             <div class="image-container">
-                <img src="C:\Users\ASUS\Downloads\gghffgg\pranav.jpg" alt="Image 1" class="image">
+                <img src="pranav.jpg" alt="Image 1" class="image">
                 <p class="image-name">Founder: Pranav</p>
                 <div class="image-info">He is the founder of the platform and he made this website into existence in 2010. He has done B.E in computer science.</div>
             </div>
             <div class="image-container">
-                <img src="C:\Users\ASUS\Downloads\gghffgg\lata.jpg" alt="Image 2" class="image">
+                <img src="lata.jpg" alt="Image 2" class="image">
                 <p class="image-name">CEO: Lata</p>
                 <div class="image-info">She is the CEO of the website, has put all her efforts in making the company reach its peak level. She holds a degree of Doctor of Pharmacy.</div>
             </div>
             <div class="image-container">
-                <img src="C:\Users\ASUS\Downloads\gghffgg\swaroop.jpg" alt="Image 3" class="image">
+                <img src="swaroop.jpg" alt="Image 3" class="image">
                 <p class="image-name">Manager: Swaroop</p>
                 <div class="image-info">He is the working manager of the company and has the potential to work beyond our expectations. He has a degree of B.E in Electronics and Communication.</div>
             </div>
             <div class="image-container">
-                <img src="C:\Users\ASUS\Downloads\gghffgg\sahitya.jpg" alt="Image 4" class="image">
+                <img src="sahitya.jpg" alt="Image 4" class="image">
                 <p class="image-name">Designer: Sahitya</p>
                 <div class="image-info">She is one of the most creative-minded individuals and has taken the website's structure to the next level. She holds a degree of B.Arch.</div>
             </div>
